<resources>
    <string name="app_name">Chop Chop</string>
    <string name="toolbar_name">Upload Recipe</string>
    <string name="rostad_chicken">Rostad chicken</string>
    <string name="img2">TODO</string>
    <string name="yellow_rice">Yellow Rice</string>
    <string name="pasta">pasta</string>
    <string name="chicken_pasta">Chicken pasta</string>
    <string name="todo3">TODO</string>
    <string name="unit_convertor">Unit Convertor</string>
    <string name="textview">TextView</string>
    <string name="enter_unit">Enter Unit</string>
    <string name="enter">Enter</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="yields">Yields</string>
    <string name="unit_2">unit 2</string>
    <string name="unit_1">unit 1</string>
    <string name="convert">Convert</string>
    <string name="maincategory">Main Category</string>
    <string name="subcategory">Sub Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="preprations">Preparation</string>
    <string name="enterimage">drop images</string>


</resources>